--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'com.github.triplet.play'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -37,4 +39,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+
+play {
+    track = "alpha"
+    userFraction = 1
+    serviceAccountEmail = "mango-app-studio@api-5276365902853364760-837358.iam.gserviceaccount.com"
+    serviceAccountCredentials = file("../service-account-key.p12")
+
+    resolutionStrategy = "auto"
+    outputProcessor { // this: ApkVariantOutput
+        versionNameOverride = "$versionNameOverride.$versionCode"
+    }
 }
