With signing keys configured

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,20 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+
+    signingConfigs {
+        release {
+            storeFile file("../keystore.jks")
+            storePassword "keystore"
+            keyAlias "test-keystore"
+            keyPassword "keystore"
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
