Encrypt Keys for Travis CI integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,10 @@ android:
   - android-sdk-license-.+
 script:
 - "./gradlew clean build"
+- if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "master" ]; then
+  ./gradlew publishReleaseApk;
+  fi
+before_install:
+- openssl aes-256-cbc -K $encrypted_054692ad430f_key -iv $encrypted_054692ad430f_iv
+  -in secrets.tar.enc -out secrets.tar -d
+- tar xvf secrets.tar
